[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emt_madrid"
version = "0.0.1"
description = "Python wrapper for the Madrid EMT (Empresa Municipal de Transportes) API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "aiohttp >= 3.8.4",
    "async-timeout >= 4.0.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fermartv/EMTMadrid"
"Bug Tracker" = "https://github.com/fermartv/EMTMadrid/issues"
